Login, register based on code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,5 @@
 server.port=8081
 
-functional.datasource.url=jdbc:sqlserver://USERCHI-SB8S03A;databaseName=Employee_Management_System
-functional.datasource.username=sa
-functional.datasource.password=80a21b4991C
-
-security.datasource.jdbc-url=jdbc:sqlserver://USERCHI-SB8S03A;databaseName=Account
-security.datasource.username=sa
-security.datasource.password=80a21b4991C
-
-spring.data.jpa.repository.packages = com.tyy.dao
-spring.data.jpa.entity.packages-to-scan= com.tyy.entities
+spring.datasource.jdbc-url=jdbc:sqlserver://USERCHI-SB8S03A;databaseName=Employee_Management_System
+spring.datasource.username=sa
+spring.datasource.password=80a21b4991C
