--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
-
+spring.jpa.properties.javax.persistence.validation.mode=none
 spring.datasource.jdbc-url=jdbc:sqlserver://USERCHI-SB8S03A;databaseName=Employee_Management_System
 spring.datasource.username=sa
 spring.datasource.password=80a21b4991C
