--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.datasource.jdbc-url=jdbc:sqlserver://USERCHI-SB8S03A;databaseName=Employe
 spring.datasource.username=sa
 #spring.datasource.password=Yu559347
 spring.datasource.password=80a21b4991C
+
+pagehelper:
+offsetAsPageNum: true
+rowBoundsWithCount: true
+reasonable: true
+returnPageInfo: true
+params: count=countSql
