--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-server.port=8081
+server.port=5000
 spring.jpa.properties.javax.persistence.validation.mode=none
-spring.datasource.jdbc-url=jdbc:sqlserver://USERCHI-SB8S03A;databaseName=Employee_Management_System
+spring.datasource.jdbc-url=jdbc:sqlserver://testdb.ceegsi8l959c.us-east-2.rds.amazonaws.com:1433;databaseName=Employee_Management_System
+#spring.datasource.jdbc-url=jdbc:sqlserver://USERCHI-SB8S03A;databaseName=Employee_Management_System
 #spring.datasource.jdbc-url=jdbc:sqlserver://DESKTOP-M0IU0CL\u005cEMSQLSERVER;databaseName=Employee_Management_System
 
 spring.datasource.username=sa
